cmake_minimum_required (VERSION 2.6)
project(sl_api)
include_directories(src/include)
file(GLOB SOURCES "src/*.cpp")
add_executable(sl_api ${SOURCES})

project(test_sl_api)
include_directories(src/include/unity)
include_directories(src/include/unity_fixture)
include_directories(src/test)
include_directories(src)
file(GLOB TEST_SOURCES "src/include/*.c")
file(GLOB TEST_SOURCES "src/test/*.cpp")
file(GLOB TEST_SOURCES "src/xml*.cpp")
add_executable(test_sl_api ${TEST_SOURCES})
